Last modified: Feb-21-2022

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rhodium+Libre&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="nav" style="color: #33415c">
@@ -30,8 +30,8 @@
   <div>
   {% block content %}{% endblock %}
   </div>
-  <div id="footer" style= "text-align: center; position:absolute; bottom:0px; color: white ">
-    &copy; Copyright 2022 by <a href="https://www.linkedin.com/in/endriase-yetbarek-4b2055138/">Endriase Yetbark</a>.
+  <div id="footer" style= "text-align: center; position:absolute; right: 40%; bottom:0px; color: white ">
+    &copy; Copyright 2022 by <a style="color: white;" href="https://www.linkedin.com/in/endriase-yetbarek-4b2055138/">Endriase Yetbark</a>.
   </div>
   </div>
 </body>
