--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
  {% block content %}
-<body style=" font-family:'Architects Daughter', cursive; font-weight:100; text-align: center; background-image:
+<body style=" font-family: 'Rhodium Libre', serif; text-align: center; background-image:
 url(https://images.pexels.com/photos/3747468/pexels-photo-3747468.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);" >
 <h1> Welcome! </h1>
 <form method="POST" action="">
