--- a/templates/loginForm.html
+++ b/templates/loginForm.html
@@ -8,7 +8,7 @@
 
 </head>
  {% block content %}
-<body style=" font-family:'Architects Daughter', cursive; font-weight:100; color: #f8f9fa;
+<body style=" font-family: 'Rhodium Libre', serif; color: #f8f9fa;
 background-image: url(https://images.pexels.com/photos/6344238/pexels-photo-6344238.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 background-size: 90%;background-repeat: no">
 <div style="color: #f8f9fa">
