--- a/templates/signupForm.html
+++ b/templates/signupForm.html
@@ -7,7 +7,7 @@
     <title>{% block head %}Signup {% endblock%}</title>
 </head>
  {% block content %}
-<body style=" font-family:'Architects Daughter', cursive; font-weight:100;
+<body style=" font-family: 'Rhodium Libre', serif;
 background-image:url(https://images.pexels.com/photos/9572561/pexels-photo-9572561.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
  background-size: 100%">
 <div style="color: #fef9ef">
